--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Boaty Hype Man
+author=Devdeve
+description=Let Boaty be your hype man
+tags=boaty
+plugins=com.example.boatyExcitedPlugin
