Fixing plugin properties file

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Boaty Hype Man
 author=Devdeve
 description=Let Boaty be your hype man
 tags=boaty
-plugins=com.example.boatyExcitedPlugin
+plugins=com.boatyExcited.boatyExcitedPlugin
